# Job-search-and-company-review

./: .gitignore  README.md  READNE.md  docker-compose.jobplenet.yml  docker-compose.kreditjob.yml  docker-compose.prod.yml  docker-compose.saramin.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
company_review/: celerybeat-schedule  proxy.py  pyproject.toml  test.py
company_review/Dockerfile/: Dockerfile.dev  Dockerfile.prod  Dockerfile.worker
company_review/celeries/: celery.py  get_compnay_info.py  tasks.py
company_review/config/: asgi.py  gunicorn.py  urls.py  utils.py  utls.py  wsgi.py
company_review/config/settings/: base.py  dev.py  prod.py
company_review/crawling/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
company_review/crawling/functions/: jobkorea.py  jobplanet.py  make_search_address.py  process_name.py  tasks.py
company_review/crawling/migrations/: 0001_initial.py  0002_kreditjob_rename_page_jobplanet_company_pk_and_more.py  0003_kreditjob_address.py  0004_alter_jobplanet_data_and_more.py  0005_alter_jobplanet_company_pk_and_more.py  0006_saramin.py  0007_jobplanet_address_jobplanet_search_address_and_more.py  0008_alter_jobplanet_search_address_and_more.py  0009_jobkorea.py  0010_alter_jobkorea_address_alter_jobplanet_address_and_more.py  0011_searchresult.py
company_review/crawling/search_jobs/: __init__.py  jobkorea.py  saramin.py  search.py  wanted.py  wanted_category.json
company_review/entrypoint/: .entrypoint.dev  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.worker.sh
nginx/: Dockerfile
(+17 files in other folders)
