[tool.poetry]
name = "company_review"
version = "0.1.0"
description = ""
authors = ["NGG-kang <skarndrkd1222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
psycopg2-binary = "^2.9.3"
django-debug-toolbar = "^3.2.4"
django-json-widget = "^1.1.1"
soupsieve = "^2.3.1"
pip = "^22.0.2"
proxy-requests = "^0.5.2"
requests-ip-rotator = "^1.0.10"
celery = "^5.2.3"
django-redis = "^5.2.0"
free-proxy = "^1.0.6"
django-htmx = "^1.8.0"
django-crontab = "^0.7.1"
ipython = "^8.0.1"
django-celery-results = "^2.2.0"
django-celery-beat = "^2.2.1"
gunicorn = "^20.1.0"
fake-headers = "^1.0.2"
pandas = "^1.4.1"
ipykernel = "^6.9.1"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
djhtml = "^1.5.0"
poetry-lock-package = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
